# simultan-chess

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml
src/: db.rs  game.rs  lib.rs  main.rs  server.rs  utils.rs  ws.rs
src/game/: chess_piece.rs  full_game_tests.rs  validation.rs
src/game/validation/: bishop.rs  check_mate.rs  king.rs  knight.rs  pawn.rs  queen.rs  rook.rs
src/utils/: convert_notation.rs  error.rs  middleware.rs  request.rs  response.rs
