[package]
name = "chess-voting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.11.5" }
log = "0.4"
dotenv = "0.15.0"
once_cell = "1.19.0"
uuid = {version= "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
actix-web = { version = "4", features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
libsql = "0.3.5"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
actix-web-actors = "4.3.0"
actix = "0.13.5"
serde_json = "1.0.120"
openssl = "0.10.66"

[features]
default = []

